# ScreenshotHistory

./: .gitignore  README.md  ScreenshotHistory_TechSpec.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: index.html
scripts/: gen-icons.mjs  prepare-tesseract.ps1
src/: App.vue  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard_monitor.rs  commands.rs  foreground.rs  image_saver.rs  lib.rs  main.rs  ocr_engine.rs  ocr_worker.rs  tray.rs
src-tauri/src/db/: mod.rs
src/components/: HistoryList.vue  ImagePreview.vue  SearchBar.vue
src/stores/: history.ts
